# UP-Assistant

./: .gitignore  BVideo.cpp  BVideo.h  BiliBiliCard.cpp  BiliBiliCard.h  BiliBiliQuery.cpp  BiliBiliQuery.h  CMakeLists.txt  NewTaskDialog.cpp  NewTaskDialog.h  README.md  UpAssistantWidget.cpp  UpAssistantWidget.h  config.json  logo.rc  main.cpp  res.qrc
